--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.23.1",
+        "react-select": "^5.10.2",
         "recharts": "^2.15.4",
         "tailwind-merge": "^2.3.0"
     },
