--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@fastify/cookie": "^11.0.2",
         "@fastify/cors": "^10.0.1",
+        "@fastify/helmet": "^13.0.2",
         "@fastify/jwt": "^10.0.0",
         "@fastify/rate-limit": "^10.3.0",
         "@fastify/static": "^8.0.1",
